--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"lodash": "^4.17.4",
 		"react": "15.4.2",
 		"react-native": "0.41.2"
 	},
 	"devDependencies": {
+		"babel-eslint": "^7.1.1",
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
+		"eslint": "^3.16.0",
+		"eslint-plugin-babel": "^4.0.1",
+		"eslint-plugin-react": "^6.10.0",
 		"jest": "19.0.0",
 		"react-test-renderer": "15.4.2"
 	},
