--- a/.eslintrc
+++ b/.eslintrc
@@ -60,6 +60,7 @@
     "handle-callback-err": [1, "^(err|error)$" ],
     "indent": 0,
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
+    "keyword-spacing": 2,
     "linebreak-style": 0,
     "lines-around-comment": 0,
     "max-nested-callbacks": 0,
@@ -84,7 +85,6 @@
     "no-else-return": 0,
     "no-empty": 0,
     "no-empty-character-class": 2,
-    "no-empty-label": 2,
     "no-eq-null": 0,
     "no-eval": 2,
     "no-ex-assign": 2,
@@ -173,12 +173,10 @@
     "semi": [1, "always"],
     "semi-spacing": 0,
     "sort-vars": 0,
-    "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "space-before-function-paren": 0,
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
     "space-unary-ops": [2, { "words": true, "nonwords": false }],
     "spaced-comment": [2, "always", { "markers": ["global", "globals", "eslint", "eslint-disable", "*package", "!"] }],
     "strict": 0,
