--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 	"dependencies": {
 		"lodash": "^4.17.4",
 		"react": "15.4.2",
-		"react-native": "0.41.2"
+		"react-native": "0.41.2",
+		"react-native-router-flux": "^3.37.0",
+		"react-redux": "^5.0.2",
+		"redux-logger": "^2.8.1",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^7.1.1",
