--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
-		"react": "15.4.2",
+		"react": "~15.4.1",
 		"react-native": "0.42.0",
 		"react-native-router-flux": "^3.37.0",
-		"react-redux": "^5.0.2",
+		"react-redux": "^5.0.3",
+		"redux": "^3.6.0",
 		"redux-logger": "^2.8.1",
 		"redux-thunk": "^2.2.0"
 	},
