--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"lodash": "^4.17.4",
 		"react": "~15.4.1",
 		"react-native": "0.42.0",
+		"react-native-linear-gradient": "^2.0.0",
 		"react-native-router-flux": "^3.37.0",
+		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
 		"redux-logger": "^2.8.1",
