--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"react-native-router-flux": "^3.37.0",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
-		"redux-logger": "^2.8.1",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
@@ -25,7 +24,8 @@
 		"eslint-plugin-babel": "^4.0.1",
 		"eslint-plugin-react": "^6.10.0",
 		"jest": "19.0.0",
-		"react-test-renderer": "15.4.2"
+		"react-test-renderer": "15.4.2",
+		"remote-redux-devtools": "^0.5.7"
 	},
 	"jest": {
 		"preset": "react-native"
