--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
-		"redux-logger": "^2.8.1",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"remote-redux-devtools": "^0.5.7"
 	},
 	"devDependencies": {
 		"babel-eslint": "^7.1.1",
